Add scene image and update page

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Bienvenido a mi web básica</h1>
     <p>Esta es una página de ejemplo creada para la demostración.</p>
+    <img src="img/cruce_con_gatitos.svg" alt="Cruce con autos, motos y gatitos escondidos" width="300" />
     <button id="clickMe">Haz clic</button>
     <script src="js/main.js"></script>
 </body>
