Replace kitten scene with bouncing ball

--- a/index.html
+++ b/index.html
@@ -3,14 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web Básica</title>
+    <title>Pelotita Rebotando</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>Bienvenido a mi web básica</h1>
-    <p>Esta es una página de ejemplo creada para la demostración.</p>
-    <img src="img/cruce_con_gatitos.svg" alt="Cruce con autos, motos y gatitos escondidos" width="300" />
-    <button id="clickMe">Haz clic</button>
-    <script src="js/main.js"></script>
+    <h1>Pelotita Roja Rebotando</h1>
+    <div id="ball"></div>
 </body>
 </html>
