Add moving cloud scene

--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pelotita Rebotando</title>
+    <title>Cielo con Nubes</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>Pelotita Roja Rebotando</h1>
-    <div id="ball"></div>
-    <script src="js/main.js"></script>
+    <h1>Cielo con Nubes</h1>
+    <div class="cloud"></div>
+    <div class="cloud"></div>
+    <div class="cloud"></div>
 </body>
 </html>
